# CheatStengine

./: .clang-format  .clocignore  .gitignore  CMakeLists.txt  README.md
CheatStengine/: CMakeLists.txt
CheatStengine/src/CheatEngine/: MainLayer.cpp  MainLayer.h  Utils.cpp  Utils.h  main.cpp
CheatStengine/src/CheatEngine/AddressEvaluator/: Ast.cpp  Ast.h  Error.h  Evaluator.cpp  Lexer.cpp  Parser.cpp  Parser.h  Token.h
CheatStengine/src/CheatEngine/Assembly/: Assembler.cpp  Assembler.h  Mnemonic.h
CheatStengine/src/CheatEngine/Core/: Process.cpp  Process.h  State.h  ThreadPool.h
CheatStengine/src/CheatEngine/Panes/: DisassemblyPane.cpp  DisassemblyPane.h  MemoryScannerPane.cpp  MemoryScannerPane.h  MemoryViewerPane.h  ModulesPane.cpp  ModulesPane.h  Pane.h  StructDissectPane.cpp  StructDissectPane.h  WatchPane.cpp  WatchPane.h
CheatStengine/src/CheatEngine/Tools/: MemoryScanner.cpp  MemoryScanner.h  RTTI.cpp  RTTI.h  StructDissect.cpp  StructDissect.h
CheatStengine/src/CheatEngine/UI/: MenuBar.cpp  MenuBar.h  TitleBar.cpp
CheatStengine/src/CheatStengine/: MainLayer.cpp  MainLayer.h  main.cpp
CheatStengine/src/CheatStengine/AddressEvaluator/: Ast.cpp  Ast.h  Evaluator.cpp  Evaluator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h
CheatStengine/src/CheatStengine/Assembly/: Assembler.cpp  Formatter.cpp  Formatter.h
CheatStengine/src/CheatStengine/Core/: KeybindManager.h  ModalManager.h  Process.cpp  Process.h  State.h
CheatStengine/src/CheatStengine/Icons/: Codicons.h  FontAwesome6.h  MaterialDesignIcons.h
Engine/: CMakeLists.txt
Engine/src/: Engine.h
(+94 files in other folders)
